Avoid column breaks in weird spots on contributors

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -483,3 +483,8 @@ ul.contributors {
   padding-left:15px;
   padding-bottom:30px;
 }
+
+.break-avoid {
+    -webkit-column-break-inside:avoid;
+	break-inside:avoid;
+}
